# short-tutorials

./: .pre-commit-config.yaml
auth0-fastapi/: m2m.py  server.py
fastapi-auth0/: README.md
fastapi-auth0-authz/: README.md  pyproject.toml  server.py
fastapi-docker/: Dockerfile  pyproject.toml
fastapi-middleware/: README.md  pyproject.toml  server.py
fastapi-render/: README.md  pyproject.toml  server.py
fastapi-serverless/: README.md  pyproject.toml  server.py  serverless.yaml
