[tool.poetry]
name = "auth0 + fastapi tutorial"
version = "0.1.0"
description = "Examples for tutorial on integrating FastAPI with Auth0"
authors = ["Jose Haro Peralta <jose@microapis.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
python-jose = "^3.3.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
